tests/ui/sanitize-attr/invalid-sanitize.stderr
error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:4:1
   |
LL | #[sanitize(brontosaurus = "off")]
   | ^^^^^^^^^^^------------^^^^^^^^^^
   |            |
   |            valid arguments are "address", "cfi", "kcfi", "memory", "memtag", "shadow_call_stack", "thread", "hwaddress" or "realtime"

error: multiple `sanitize` attributes
  --> $DIR/invalid-sanitize.rs:7:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/invalid-sanitize.rs:8:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: multiple `sanitize` attributes
  --> $DIR/invalid-sanitize.rs:11:1
   |
LL | #[sanitize(address = "on")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/invalid-sanitize.rs:12:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:15:1
   |
LL | #[sanitize(address = "bogus")]
   | ^^^^^^^^^^^^^^^^^^^^^-------^^
   |                      |
   |                      valid arguments are "on" or "off"

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:18:1
   |
LL | #[sanitize = "off"]
   | ^^^^^^^^^^^-------^
   |            |
   |            expected this to be a list

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:21:1
   |
LL | #[sanitize]
   | ^^^^^^^^^^^ expected this to be a list

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:24:1
   |
LL | #[sanitize(realtime = "on")]
   | ^^^^^^^^^^^^^^^^^^^^^^----^^
   |                       |
   |                       valid arguments are "nonblocking", "blocking" or "caller"

warning: the async executor can run blocking code, without realtime sanitizer catching it
  --> $DIR/invalid-sanitize.rs:27:1
   |
LL | #[sanitize(realtime = "nonblocking")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(rtsan_nonblocking_async)]` on by default

warning: the async executor can run blocking code, without realtime sanitizer catching it
  --> $DIR/invalid-sanitize.rs:32:9
   |
LL | ...   #[sanitize(realtime = "nonblocking")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the async executor can run blocking code, without realtime sanitizer catching it
  --> $DIR/invalid-sanitize.rs:37:9
   |
LL | ...   #[sanitize(realtime = "nonblocking")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0539`.
